--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'scss/variables.scss';
+
+// COMPONENTES DE TERCEIROS COM ESTILIZAÇÃO CUSTOMIZADA
+@import 'scss/custom';
+
+// ESTILOS USADOS PARA TODO O SISTEMA
+@import 'scss/global';
