--- a/src/app/pages/autenticacao/login/login/login.component.html
+++ b/src/app/pages/autenticacao/login/login/login.component.html
@@ -11,7 +11,8 @@
             <a href="">
                 Acessar
             </a>
-            <a href="">
+            <a href=""
+               routerLink="/recuperar-senha">
                 Esqueci a senha
             </a>
             <a href="">
