criação tela de auto-cadastro

--- a/src/app/pages/autenticacao/auto-cadastro/auto-cadastro.component.html
+++ b/src/app/pages/autenticacao/auto-cadastro/auto-cadastro.component.html
@@ -1,22 +1,22 @@
 <div class="wrapper">
     <div class="box">
-        <h3>Login</h3>
+        <h3>Cadastrar Conta</h3>
         <div class="inputs">
             Usuário
         </div>
         <div class="inputs">
             Senha
         </div>
+        <div class="inputs">
+            Confirmar Senha
+        </div>
         <div class="links">
-            <a href="">
-                Acessar
+            <a href="/login">
+                Voltar
             </a>
             <a href=""
-               routerLink="/recuperar-senha">
-                Esqueci a senha
-            </a>
-            <a href="">
-                Cadastrar conta
+               routerLink="/login">
+                Salvar
             </a>
         </div>
     </div>
