--- a/src/app/pages/autenticacao/recuperar-senha/recuperar-senha.component.html
+++ b/src/app/pages/autenticacao/recuperar-senha/recuperar-senha.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="links">
             <a href=""
-               routerLink="/login">Cancelar</a>
+               routerLink="/login">Voltar</a>
             <a href="">Confirmar</a>
         </div>
     </div>
