foi criada a estrutura da spa e o componente de header

--- a/src/app/pages/autenticacao/login/login.component.html
+++ b/src/app/pages/autenticacao/login/login.component.html
@@ -8,7 +8,7 @@
             Senha
         </div>
         <div class="links">
-            <a href="">
+            <a href="" routerLink="/template">
                 Acessar
             </a>
             <a href=""
