construção do menu lateral

--- a/src/app/components/template/template.component.scss
+++ b/src/app/components/template/template.component.scss
@@ -3,7 +3,8 @@
 .wrapper {
     display: grid;
     grid-template-rows: 5rem 5rem 1fr 2rem;
-    grid-gap: 10px;
+    grid-column-gap: 10px;
+    // grid-gap: 10px;
     grid-template-areas:
         "headers"
         "sidebar"
@@ -28,6 +29,7 @@ header {
 
 aside {
     grid-area: sidebar;
+    background: $branco;
 }
 
 main {
@@ -36,4 +38,5 @@ main {
 
 footer {
     grid-area: footer;
+    background: $branco;
 }
