--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -3,7 +3,7 @@
         <app-header></app-header>
     </header>
     <aside>
-        <!-- <app-sidebar></app-sidebar> -->
+        <app-sidebar></app-sidebar>
     </aside>
     <main>
         <router-outlet></router-outlet>
