--- a/src/app/components/template/sidebar/sidebar.component.html
+++ b/src/app/components/template/sidebar/sidebar.component.html
@@ -1,32 +1,13 @@
 <nav class="sidebar">
-    <ul>
-        <li>
-            <h4>PlayStation</h4>
-            <ul>
-                <li>
-                    <a href="">God of War</a>
-                </li>
-                <li>
-                    <a href="">Spider Man</a>
-                </li>
-                <li>
-                    <a href="">The Last Of Us</a>
-                </li>
-                <li>
-                    <a href="">Ratchet and Clank</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <h4>Xbox</h4>
-            <ul>
-                <li>
-                    <a href="">Gears 5</a>
-                </li>
-                <li>
-                    <a href="">Forza Horizon 4</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+    <div class="menu-responsive"
+         (click)="menu()">
+        <div>||| Menu</div>
+    </div>
+
+    <div id="nav"
+         class="nav-responsive">
+        <app-menus></app-menus>
+    </div>
+
+    <app-menus class="nav-desktop"></app-menus>
 </nav>
