--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -9,6 +9,6 @@
         <router-outlet></router-outlet>
     </main>
     <footer>
-        <!-- <app-footer></app-footer> -->
+        <app-footer></app-footer>
     </footer>
 </div>
