rotas, lazy loading

--- a/src/app/components/template/sidebar/menus/menus.component.scss
+++ b/src/app/components/template/sidebar/menus/menus.component.scss
@@ -17,6 +17,7 @@ ul {
                     text-decoration: none;
                     color: $cinza;
                     display: block;
+                    cursor: pointer;
                     &:hover {
                         background: $cinza;
                         color: $branco !important;
