--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -2,8 +2,13 @@
 
 .header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     height: 5rem;
     color: $branco;
     padding: 0 15px;
+
+    a {
+        cursor: pointer;
+    }
 }
