--- a/src/app/components/template/sidebar/menus/menus.component.html
+++ b/src/app/components/template/sidebar/menus/menus.component.html
@@ -1,29 +1,23 @@
 <ul>
     <li>
-        <h4>PlayStation</h4>
+        <h4>Acessos</h4>
         <ul>
             <li>
-                <a href="">God of War</a>
+                <a (click)="perfisAcesso()">Perfis de Acesso</a>
             </li>
             <li>
-                <a href="">Spider Man</a>
-            </li>
-            <li>
-                <a href="">The Last Of Us</a>
-            </li>
-            <li>
-                <a href="">Ratchet and Clank</a>
+                <a (click)="usuarios()">Usuários</a>
             </li>
         </ul>
     </li>
     <li>
-        <h4>Xbox</h4>
+        <h4>Produtos</h4>
         <ul>
             <li>
-                <a href="">Gears 5</a>
+                <a (click)="monitores()">Monitores</a>
             </li>
             <li>
-                <a href="">Forza Horizon 4</a>
+                <a (click)="teclados()">Teclados</a>
             </li>
         </ul>
     </li>
