--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,45 @@
+@import '../scss/variables';
+
 body {
     background: rgb(223, 223, 223);
     font-family: Arial;
     margin: 0;
+}
+
+.container-wrap {
+    background: $branco;
+    margin: 15px;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.table {
+    width: 100%;
+    border-spacing: 0;
+    tr {
+        th {
+            text-align: left;
+            padding: 10px;
+            background: $cinza-claro;
+        }
+        td {
+            padding: 10px;
+            border: 1px solid $cinza-claro;
+        }
+    }
+}
+
+.titulo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn {
+    height: 30px;
+    background: $cinza;
+    color: $branco;
+    border:none;
+    padding: 0 15px;
 }
