implementação de guards nas rotas

--- a/src/app/pages/autenticacao/login/login.component.html
+++ b/src/app/pages/autenticacao/login/login.component.html
@@ -8,7 +8,8 @@
             Senha
         </div>
         <div class="links">
-            <a href="" routerLink="/home">
+            <a href=""
+               (click)="acessar()">
                 Acessar
             </a>
             <a href=""
